project_sources/collector/fixtures/powershell_analysis/bad/unchecked_external_exit.ps1
$Tool = "robocopy.exe"
& $Tool "missing-source" "missing-destination"
Write-Output "tool finished"
